--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@fontsource/inter": "^4.5.15"
+		"@fontsource/inter": "^4.5.15",
+		"eventsource-parser": "^0.1.0"
 	}
 }
