--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@floating-ui/dom": "^1.2.4",
 		"@fontsource/inter": "^4.5.15",
 		"eventsource-parser": "^0.1.0",
 		"shiki": "^0.14.1"
